# yahtzee-python

./: README.md  pyproject.toml
tests/: test_score.py
yahtzee_python/: score.py
